src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Adi_Division__c</fullName>
        <label>Division</label>
        <picklist>
            <picklistValues>
                <fullName>DIV I</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIV II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DIV III</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_Divmanager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Division Manager</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adi_MLOB__c</fullName>
        <label>MLOB</label>
        <picklist>
            <picklistValues>
                <fullName>Business Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial RE Banking Division FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Banking Division NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Banking Division NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial RE Banking Division NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bridge Funding Group Inc</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Adi_Team_Leader__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Leader</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contacts (Team Leader)</relationshipLabel>
        <relationshipName>ContactsTeam</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Adi_Team__c</fullName>
        <label>Team</label>
        <picklist>
            <picklistValues>
                <fullName>Miami-Dade BB Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broward/WPB BB Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB Orlando Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB Tampa Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CML Miami-Dade Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CML Tampa Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CML Jacksonville Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CML Orlando Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CML Broward/PB Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRE FL Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BB NY Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CML NY Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRE NY Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFG EF Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BFG FL Team</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Relationship Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team Leader</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.BIRTHDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Test</fullName>
        <active>true</active>
        <label>Test</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>